--- a/inventory.ini
+++ b/inventory.ini
@@ -5,31 +5,31 @@ localhost
 localhost
 
 [redis]
-redis-dev.daws-86.shop
+localhost
 
 [rabbitmq]
-rabbitmq-dev.daws-86.shop
+localhost
 
 [mysql]
-mysql-dev.daws-86.shop
+localhost
 
 [catalogue]
-catalogue-dev.daws-86.shop
+localhost
 
 [cart]
-cart-dev.daws-86.shop
+localhost
 
 [user]
-user-dev.daws-86.shop
+localhost
 
 [shipping]
-shipping-dev.daws-86.shop
+localhost
 
 [payment]
-payment-dev.daws-86.shop
+localhost
 
 [frontend]
-daws-86.shop
+localhost
 
 [all:vars]
 ansible_user=ec2-user 
