--- a/roles/payment/tasks/main.yaml
+++ b/roles/payment/tasks/main.yaml
@@ -7,8 +7,17 @@
     ansible.builtin.import_role:
       name: common
       tasks_from: python_setup.yaml
-
-
+# changed this as part of latest python3-devel from repos have upgraded openssl-libs but other openssl packages are old in AMI, so mismatch occured. we are upgrading before installing python or after
+  - name: upgrade openssl packages
+    ansible.builtin.dnf:
+      name: "{{ item }}"
+      state: latest
+    loop:
+    - openssl
+    - openssl-libs
+    - openssh
+    - openssh-server
+    - openssh-clients
   - name: import_role and do service setup
     ansible.builtin.import_role:
       name: common
