--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -1,9 +1,9 @@
-MONGODB_HOST: mongodb-{{ env }}.daws86s.fun # mongodb-dev.daws86s.fun
-REDIS_HOST: redis-{{ env }}.daws86s.fun
-CATALOGUE_HOST: catalogue.backend-alb-{{ env }}.daws86s.fun
-CART_HOST: cart.backend-alb-{{ env }}.daws86s.fun
-USER_HOST: user.backend-alb-{{ env }}.daws86s.fun
-RABBITMQ_HOST: rabbitmq-{{ env }}.daws86s.fun
-MYSQL_HOST: mysql-{{ env }}.daws86s.fun
-SHIPPING_HOST: shipping.backend-alb-{{ env }}.daws86s.fun
-PAYMENT_HOST: payment.backend-alb-{{ env }}.daws86s.fun
+MONGODB_HOST: mongodb-{{ env }}.daws-86.shop # mongodb-dev.daws-86.shop
+REDIS_HOST: redis-{{ env }}.daws-86.shop
+CATALOGUE_HOST: catalogue.backend-alb-{{ env }}.daws-86.shop
+CART_HOST: cart.backend-alb-{{ env }}.daws-86.shop
+USER_HOST: user.backend-alb-{{ env }}.daws-86.shop
+RABBITMQ_HOST: rabbitmq-{{ env }}.daws-86.shop
+MYSQL_HOST: mysql-{{ env }}.daws-86.shop
+SHIPPING_HOST: shipping.backend-alb-{{ env }}.daws-86.shop
+PAYMENT_HOST: payment.backend-alb-{{ env }}.daws-86.shop
