--- a/roles/shipping/tasks/main.yaml
+++ b/roles/shipping/tasks/main.yaml
@@ -21,7 +21,7 @@
   community.mysql.mysql_db:
     state: import
     name: all
-    login_user: roboshop
+    login_user: root
     login_password: RoboShop@1
     login_host: "{{ MYSQL_HOST }}"
     target: "{{ item }}"
