--- a/roles/shipping/tasks/main.yaml
+++ b/roles/shipping/tasks/main.yaml
@@ -22,7 +22,7 @@
     state: import
     name: all
     login_user: root
-    login_password: RoboShop@1
+    login_password: Roboshop@1
     login_host: "{{ MYSQL_HOST }}"
     target: "{{ item }}"
   loop:
