--- a/main.yaml
+++ b/main.yaml
@@ -1,6 +1,8 @@
 - name : "setup {{ component }} server"
   hosts: "{{ component }}"
   become: yes
+  vars:
+    env: "{{ env }}"
   tasks:
     - name: Debug variables
       debug:
